--- a/index.html
+++ b/index.html
@@ -81,10 +81,14 @@
 <title>Zeek Cheats</title>
 <i><a href="https://priv4te.tk/" target="_BLANK">Downloads</a></i>
 <a> 🥀 </a>
-<i><a href="https://github.com/VITAL9999l" target="_BLANK">GitHub</a></i>
+<i><a href="https://github.com/ZeekHub/" target="_BLANK">GitHub</a></i>
 <a> 🥀 </a>
 <i><a href="https://discord.gg/eS69wxhsH6" target="_BLANK">Discord Server</a></i>
 <br>
+                                                          
+<a> 🥀 </a>
+<i><a href="https://discord.gg/eS69wxhsH6" target="_BLANK">Nig Daddy</a></i>  
+                                                          
 </div>
 <title>Zeek Cheats</title>
 </div>
