--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 <br>
 <br>
 <br>                                                        
-<i><a href="https://discord.gg/eS69wxhsH6" target="_BLANK">GTA Downloads</a></i>  
+<i><a href="" target="_BLANK">GTA Downloads</a></i>  
 <br>
 <br>
 <i><a href="https://cdn.discordapp.com/attachments/838486763428118589/838528895824166962/ZeroTwo_0.5.rar" target="_BLANK">ZeroTwo</a></i>  
@@ -112,7 +112,7 @@
 <br>                                                        
 <br>
 <br>                                                        
-<i><a href="https://discord.gg/eS69wxhsH6" target="_BLANK">CSGO Downloads</a></i>  
+<i><a href="" target="_BLANK">CSGO Downloads</a></i>  
 <br>
 <br>
 <i><a href="https://cdn.discordapp.com/attachments/838486763428118589/838529252138811442/otcV3.rar" target="_BLANK">OneTapCrack v3</a></i>  
