--- a/index.html
+++ b/index.html
@@ -113,11 +113,23 @@
 <i><a href="" target="_BLANK">CSGO Downloads</a></i>  
 <br>
 <br>
-<i><a href="https://cdn.discordapp.com/attachments/838486763428118589/838529252138811442/otcV3.rar" target="_BLANK">OneTapCrack v3</a></i>  
+<i><a href="https://cdn.discordapp.com/attachments/838486763428118589/838529252138811442/otcV3.rar" target="_BLANK">OneTapCrack-v3</a></i>  
 <i><a href="https://cdn.discordapp.com/attachments/838486763428118589/838529225119498270/OSIRIS.rar" target="_BLANK">Osiris</a></i>  
 <i><a href="https://cdn.discordapp.com/attachments/838486763428118589/838529241413976074/Zoom_CSGO.rar" target="_BLANK">Zoom</a></i>  
 <i><a href="https://cdn.discordapp.com/attachments/838486763428118589/838529603164700682/Le_Chiffre.exe" target="_BLANK">LeChiffre</a></i>  
-<i><a href="https://cdn.discordapp.com/attachments/838486763428118589/838529224679096390/IWARE.rar" target="_BLANK">IWare</a></i>  
+<i><a href="https://cdn.discordapp.com/attachments/838486763428118589/838529224679096390/IWARE.rar" target="_BLANK">IWare</a></i>
+                                                                                                                   
+<br>                                                        
+<br>
+<br>                                                        
+<i><a href="" target="_BLANK">Tool Downloads</a></i>  
+<br>
+<br>
+<i><a href="https://cdn.discordapp.com/attachments/838486763428118589/838538897537237002/Spoofers.rar" target="_BLANK">Spoofer-Pack v3</a></i>  
+<i><a href="https://cdn.discordapp.com/attachments/838486763428118589/838539071759843398/Cleaners.rar" target="_BLANK">Cleaner-Pack</a></i>  
+<i><a href="https://cdn.discordapp.com/attachments/838486763428118589/838538813449306172/Activation.rar" target="_BLANK">Windows-Activator</a></i>  
+<i><a href="https://cdn.discordapp.com/attachments/838486763428118589/838538814582030357/Windows-ISO-Downloader_2.exe" target="_BLANK">Windows-Downgrader</a></i>  
+<i><a href="https://cdn.discordapp.com/attachments/831955085407289354/837075827056443502/HWIDkey_Changer.exe" target="_BLANK">HWIDKey-Changer</a></i>
                                                                                                                      
 </div>
 <title>Zeek Cheats</title>
